@@ -33,7 +33,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-Image-Generator
-  homepage: https://github.com/tupinek/App-Image-Generator
+  homepage: https://github.com/michal-josef-spacek/App-Image-Generator
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/App-Image-Generator
+  repository: git://github.com/michal-josef-spacek/App-Image-Generator
 version: '0.03'
