@@ -26,8 +26,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=App-Image-Generator';
-resources 'homepage' => 'https://github.com/tupinek/App-Image-Generator';
-resources 'repository' => 'git://github.com/tupinek/App-Image-Generator';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/App-Image-Generator';
+resources 'repository' => 'git://github.com/michal-josef-spacek/App-Image-Generator';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
