@@ -71,7 +71,7 @@ EXAMPLE4
      # Created foo.jpg file in local directory, generated from images in /data/images.
 
 REPOSITORY
-    <https://github.com/tupinek/App-Image-Generator>
+    <https://github.com/michal-josef-spacek/App-Image-Generator>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
