@@ -108,7 +108,7 @@ image-generator - Script to generate video.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/App-Image-Generator>
+L<https://github.com/michal-josef-spacek/App-Image-Generator>
 
 =head1 AUTHOR
 
